mule-user-guide/v/3.8/microsoft-dynamics-crm-connector.adoc
=  Microsoft Dynamics CRM连接器
:keywords: anypoint studio, connector, endpoint, microsoft, erp, ax query

*Select*

*Latest version: 2.9.0*

Microsoft Dynamics客户关系管理（CRM）连接器允许您访问Microsoft Dynamics CRM的SOAP组织服务。您可以将此连接器添加到Anypoint Studio流程中。

*Release Notes*： link:/release-notes/microsoft-dynamics-crm-connector-release-notes[Microsoft Dynamics CRM连接器发行说明] +
*Technical Reference*：https://mulesoft.github.io/mule-microsoft-dynamics-crm-connector[MS动态CRM连接器技术参考] +
*Samples*： link:_attachments/dynamics-crm-connector-samples.zip[dynamics-crm-connector-samples.zip]

== 概述

该连接器可让您执行以下操作：

* 创建，更新和删除记录
* 检索单个记录或查询多个记录
* 关联和取消关联记录
* 执行请求消息

[[supportedversions]]

此连接器支持这些Microsoft Dynamics CRM版本：

*  Microsoft Dynamics CRM 2016（内部部署）
*  Microsoft Dynamics CRM 2015（内部部署）
*  Microsoft Dynamics CRM 2013（内部部署）
*  Microsoft Dynamics CRM 2011（内部部署）
*  Microsoft Dynamics CRM Online（8.0，8.1，8.2）

除高级用途外，配置连接器需要最少的参数：

* 被授予访问CRM权限的用户的用户名和密码
* 组织服务网址 - 通常格式为：`+https://mulesoft03.api.crm.dynamics.com/XRMServices/2011/Organization.svc+`

== 安装和配置

. 在安装连接器之前安装Java加密扩展（JCE）软件包。
. 从 link:http://www.oracle.com/technetwork/java/javase/downloads/jce-7-download-432124.html[Oracle的Java 7 JCE下载站点]下载JCE for Java 7。
. 从 link:http://www.oracle.com/technetwork/java/javase/downloads/jce8-download-2133166.html[Oracle的Java 8 JCE下载站点]下载JCE for Java 8。
. 在Anypoint Studio中，点击Studio任务栏中的Exchange图标。
. 点击Anypoint Exchange中的登录。
. 搜索连接器，然后单击安装。
. 按照提示安装连接器。

Studio有更新时，会在右下角显示一条消息，您可以单击该消息来安装更新。

=== 配置连接器

==== 第1步：创建一个新的Mule项目

配置：

. 在Anypoint Studio中，点击*File*> *New*> *Mule Project*。
. 指定一个*Project Name*并点击*Finish*。

==== 第2步：配置全局元素

将连接器配置为Microsoft Dynamics CRM实例：

. 点击*Global Elements*标签，然后点击*Create*。
. 在*Search*字段中，键入*crm*，点击*Microsoft Dynamics CRM*，然后点击*OK*。
. 单击用于身份验证的连接策略（例如，*Microsoft Dynamics CRM: Kerberos Connection*）：
+
image:CRMGlobalType.png[CRMGlobalType]
+
. 指定一个*Username*和*Password*。
. 指定用于访问CRM系统的*Organization Service URL*。点击*OK*。
+
例如：`+https://{siteUrl}/XRMServices/2011/Organization.svc+`
+
. 点击*Test Connection*以确保连接正常工作。
. 连接成功后，请点击*OK*。
+
image:CRMKerberosConnection.png[CRMKerberosConnection]

=== 创建一个Mule流

创建流程：

. 点击*Message Flow*标签。
. 在*Search*字段中，键入*http*，然后将*HTTP*连接器拖到画布上。
. 在*Search*字段中，键入*crm*，然后将*Microsoft Dynamics CRM*连接器拖到HTTP连接器旁边的画布上。
. 在*Search*字段中，键入*json*，然后将*Object to JSON*转换器拖到连接器旁边的画布上。您可以在此变压器中使用默认值。

流程显示为：

image:CRMdemoflow1.png[CRMdemoflow1]

配置流程：

. 双击*HTTP*连接器，然后单击*Connector Configuration*右侧的绿色加*+*标志：
+
image:HTTPconfigref.png[HTTPconfigref]
+
. 设置*localhost*，端口*8081*和*query*的路径：
+
image:MSDyCRMHTTPconfig.png[MSDyCRMHTTPconfig]
+
. 双击*Microsoft Dynamics CRM*。
. 点击*Connector Configuration*右侧的绿色加号*+*：
+
image:CRMConfigRef.png[CRMConfigRef]
+
. 选择用于验证您的CRM实例的连接策略。
. 指定您对CRM服务器的访问权限：*Username*，*Password*和*Organization Service URL*。
. 点击*OK*  - 有关每种认证方案的信息，请参阅<<CRM Authentication>>。
+
image:CRMproperties.png[CRMproperties]

. 对于*Operation*，点击*Retrieve multiple by query*。
*Note*：仅当您能够成功联系CRM服务器时才会显示此选项。
. 对于*Query Language*，点击*DataSense Query Language*。
*Note*：查询部分仅针对查询*Operation*显示。
. 点击*Query Builder*。
. 在查询生成器窗口中：+
.. 在*Types*中，点击*account*。
.. 在*Fields*中，点击*accountid*，*accountnumber*和*name*。
.. 在*Order By*中，点击*name*。
.. 在*Direction*中，点击*DESCENDING*。
.. 点击*OK*。
+

image:CRMQueryBuilder.png[CRMQueryBuilder]

=== 运行流程

. 在包资源管理器中，右键单击您的项目名称，然后单击*Run As*> *Mule Application*。
. 检查控制台以查看应用程序何时启动。如果没有错误发生，您应该看到如下例所示的消息：
+

[source, code, linenums]
----
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ Started app 'crm-demo'                                   +
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
----

. 打开浏览器并访问`http://localhost:8081/query` +
+
帐户列表按名称和JSON格式按降序显示（结果因您的CRM实例而异）。例如：
+

[source, code, linenums]
----
[{"name":"Alpine Ski House (sample)","accountnumber":"ABCO9M32","accountid":"f5a917b4-7e06-e411-82a5-6c3be5a8ad64"},
{"name":"Adventure Works (sample)","accountnumber":"ABC28UU7","accountid":"eba917b4-7e06-e411-82a5-6c3be5a8ad64"}]
----

==  CRM认证

=== 认证方案

Microsoft Dynamics CRM连接器支持基于所访问的Microsoft Dynamics CRM的不同身份验证方案。

内部Microsoft Dynamics CRM支持的身份验证方案：

*  Windows身份验证 -  Kerberos
*  Windows身份验证 -  NTLM（需要Windows的Anypoint Gateway）
* 基于声明的身份验证

受支持的Microsoft Dynamics CRM联机身份验证方案：

* 实时ID
*  Office 365

=== 高级Kerberos身份验证

配置Kerberos身份验证连接器的首选方法是利用自动配置。自动检测Kerberos配置设置的先决条件是：

*  Mule ESB服务器加入与CRM实例相同的域
可以从Mule ESB服务器访问*  AD域控制器

如果无法自动检测到Kerberos配置设置，则可以手动设置以下参数：

*  *SPN*：服务主体名称通常可以从组织服务的WSDL中自动发现。如果无法自动发现SPN，则必须在连接器的连接配置属性SPN中设置该值。 SPN通常看起来像主机/ SERVER-NAME.MYREALM.COM。
+
如果组织服务WSDL报告用户主体名称（UPN）而不是SPN，则将CRM服务配置为在域帐户下运行。在这种情况下，您必须确保域管理员已在AD的此服务帐户下为CRM主机名创建了一个SPN。在这种情况下，SPN的格式为`+http://crm.mycompany.com+`  - 请注意，SPN通常会创建为与用于访问CRM服务的完全限定的DNS名称相匹配。

*  *Realm*：用户所属的域。请注意，此值区分大小写，并且必须完全按Active Directory中的定义进行指定。

*  *KDC*：这通常是域控制器（服务器名称或IP）。

如果环境非常复杂并且需要进一步设置，请手动创建Kerberos配置文件并在连接器的连接配置中引用该文件。

示例Kerberos配置文件：

[source, code, linenums]
----
[libdefaults]
default_realm = MYREALM.COM
[realms]
MYREALM.COM = {
    kdc = mydomaincontroller.myrealm.com
    default_domain = MYREALM.COM
}
[domain_realm]
.myrealm.com = MYREALM.COM
myrealm.com = MYREALM.COM
----

*Note:* `default_realm`和`default_domain`值区分大小写。完全按照Active Directory中的定义指定这些值。如果在测试连接期间收到错误，指出`Message stream modified (41)`，则域名的格式不正确。

有关如何创建Kerberos配置文件的更多信息，请参阅http://web.mit.edu/kerberos/krb5-devel/doc/admin/conf_files/krb5_conf.html。

要在连接器的连接配置中引用Kerberos配置文件，请执行以下操作：

. 设置属性*Kerberos Properties File Path*
. 将文件放在类路径中（通常在src / main / resources下）并将该属性的值设置为*classpath:krb5.conf* +
或者：+
如*C:\kerberos\krb5.conf*提供文件的完整路径

您可以通过定义JAAS登录配置文件来调整Kerberos登录模块（Krb5LoginModule）和特定于场景的配置。

Kerberos登录模块的示例JAAS登录配置文件：

[source, code, linenums]
----
Kerberos {
    com.sun.security.auth.module.Krb5LoginModule required
    debug=true
    refreshKrb5Config=true;
};
----

有关如何为Kerberos登录模块创建JAAS登录配置文件的更多信息，请参阅 link:http://docs.oracle.com/javase/7/docs/jre/api/security/jaas/spec/com/sun/security/auth/module/Krb5LoginModule.html[类Krb5LoginModule]。

要在连接器的连接配置中引用Kerberos登录模块的JAAS登录配置文件，请执行以下操作：

. 设置属性*Login Properties File Path*
. 将文件放在类路径中（通常在`src/main/resources`下），并将该属性的值设置为`classpath:jaas.conf`
+
要么：
+
如`C:\kerberos\jaas.conf`提供文件的完整路径

===  NTLM身份验证

对于通过NTLM身份验证连接到Microsoft Dynamics CRM，连接器通过_Anypoint Platform Gateway Service_路由请求。

Anypoint平台网关服务作为Windows服务运行。使用加入到您想要认证的Dynamics CRM实例所在域的计算机上的 link:/mule-user-guide/v/3.8/windows-gateway-services-guide[Windows网关服务指南]中的说明进行安装。

重要说明：Windows网关服务存在以下问题：与CRM Dynamics安装在同一台计算机上时，主机名将解析为IPv6，而NTLM不支持该名称。所以这需要通过IP访问。另外，对于CRM Dynamics连接器和Windows网关服务，当使用NTLM使用CRM Dynamics连接器时，不支持HTTPS。

要安装Windows网关服务：

. 解压缩下载的文件并运行其中包含的`.exe`。
+
为了保护您的安全，可执行文件由MuleSoft Inc.签署
+
. 按照说明完成安装。不需要进一步的配置。

安装_Anypoint Platform Gateway Service_后，使用*Username*，*Password*和*Organization Service URL*配置连接器的连接属性。

在NTLM身份验证设置下，将*Gateway Router Service Address*设置为Anypoint Platform网关服务的地址。该地址默认为`https://myserver:9333/router`。

此时，应该成功测试连接。

===  CRM在线身份验证

带有Office365的Microsoft Dynamics CRM Online允许对已知域进行联合身份验证。 Office365提供端点来发现联合认证的用户参数。在某些情况下，这个发现是不可能的。

对于这些情况，有可选的连接配置参数：

*  Sts元数据URL（可选）：STS的元数据交换URL。对于ADFS，这通常是+ https：//mycompany-sts.com/adfs/services/trust/mex+。
*   Sts用户名端口Qname（可选）：接受用户名和密码凭证的端口名称，如STS元数据交换URL中所述。以格式`{namespace}/port_name`将此值指定为`Qname`。对于ADFS，通常这是：
+
[source, code]
----
{+http://schemas.microsoft.com/ws/2008/06/identity/securitytokenservice+}UserNameWSTrustBinding_IWSTrust13Async}
----

== 代理

配置连接器使用的代理。这可以在连接器的全局元素配置中的`Proxy`选项卡下指定。
代理地址的值必须采用格式`{hostname/IP}:{port}`。例如，如果代理正在端口8080下的同一台服务器上运行：`127.0.0.1:8080`或`localhost:8080`。

元数据缓存== 

连接器在默认情况下会缓存元数据。

元数据检索数据的意义，也允许完成一些操作。默认配置是使用连接器的推荐方式，但可能会出现这样的情况，即元数据上的更改通常不需要使用此缓存功能。

元数据检索器分为三类，如下所述：

数据意义：由于数据感应需要检索所有实体，因此实体检索器会执行该操作并通过实体将其缓存，以便在不同调用之间重用。另外，数据感也会暴露每个实体的属性，并且这是通过属性检索器完成的。对于数据意义，使用的属性检索器获取所有实体的属性并将其缓存（对于您执行数据检测操作的每个实体）。
. 属性：连接器中的一些操作只需要从实体中检索引用（通过操作）属性。这些操作的默认属性检索器可以在执行单个属性查询时优化数据吞吐量，同时也可以进行缓存。如果您的方案更好地工作（即，如果您经常使用其大多数属性创建/更新实体），则可以配置这些操作（创建，更新，CreateMultiple，UpdateMultiple）行为以共享数据传感检索器。
. 关系：获取关系信息并将其缓存的特定检索器仅用于以下操作：关联和散失。

在下面显示的表格中，您可以找到自定义配置设置，以禁用特定操作子集上的元数据缓存和/或定制特定情况下的检索器行为。

[%header%autowidth.spread]
|===
|设定 |使用 |值
| org.mule.module.dynamicscrm.metadata.retrievers.nocache  |禁用所有元数据检索器的缓存 | 1禁用，否则启用
| org.mule.module.dynamicscrm.metadata.retrievers.entities.nocache  |禁用仅用于数据检测的实体元数据检索器的缓存 | 1禁用，否则启用
| org.mule.module.dynamicscrm.metadata.retrievers.relationships.nocache  |禁用关系元数据检索器的缓存 | 1禁用，否则启用
| org.mule.module.dynamicscrm.metadata.retrievers.attributes.nocache  |禁用属性元数据检索器的缓存 | 1禁用，否则启用
| org.mule.module.dynamicscrm.metadata.retrievers.attributes.share  | 共享属性元数据检索器（用于元数据范围和连接器的操作）。将此值设置为'1'，以便对操作以及元数据作用域 | 1-共享使用完整的属性元数据检索器，否则对操作使用单个属性检索器
|===

通过执行以下操作，可以将这些系统设置传递给执行mule应用程序的VM：

[source, code, linenums]
----
-Dorg.mule.module.dynamicscrm.metadata.retrievers.nocache=1
----


== 操作

有关所有连接器操作的技术参考文档，请参阅https://mulesoft.github.io/mule-microsoft-dynamics-crm-connector[Dynamics CRM APIdoc]。

=== 创建记录

为实体创建记录。

下表列出了操作输入：

[%header%autowidth.spread]
|===
|属性 |用法
| *Logical Name*  |记录所属实体的逻辑名称。
| *Attributes*  |具有实体属性名称作为地图关键字的`Map<String, Object>`。要为此操作创建一个有效载荷，请将一个'DataWeave'变压器放置在Mule流中的连接器之前。
|===

*Output*：包含创建记录的ID的字符串。

=== 创建多个记录

为实体创建一组多个记录。下表详细说明了操作输入。

[%header,cols="2*"]
|===
|属性 |用法
| *Logical Name*  |记录将属于的实体的逻辑名称。
| *Attributes List*  |带有实体属性名称列表作为地图关键字的`List<Map<String, Object>>`。通过在Mule流中的连接器之前放置'DataWeave'变压器，可以轻松创建此操作的有效载荷。
| *Use Single Transaction* |（可选）指示Dynamics CRM是否应使用单个事务创建所有项目（自Microsoft Dynamics CRM 2016起支持）。
|===

*Output*：`BulkOperationResult<Map<String,Object>>`对象

请参阅<<Data Considerations>>。

=== 检索记录

从实体中检索单个记录。

下表详细说明了操作输入。

[%header%autowidth.spread]
|===
|属性 |用法
| *Logical Name*  |记录所属实体的逻辑名称。
| *ID*  |要更新的记录的ID。
| *Attributes*  |带有返回记录的实体属性名称的`List<String>`。
|===

*Output*：`Map<String, Object>`

映射的键是检索记录的实体属性名称。

=== 通过查询检索多个记录

检索记录列表。此操作利用Mule的DSQL创建查询。

下表详细说明了操作输入。

[%header,cols="2*"]
|===
|属性 |用法
| *Query* a |
DataSense查询语言：要运行的DSQL。查询由连接器转换为Fetch XML。有关更多信息，请参阅 link:/anypoint-studio/v/6/datasense-query-language[DataSense查询语言]。

本机查询语言：运行的原始FetchXML。有关如何创建此查询的更多信息，请访问http://msdn.microsoft.com/en-us/library/gg328332.aspx。

|===

*Output*：`ProviderAwarePagingDelegate<Map<String, Object>, DynamicsCRMConnector>`

在Mule流中，这会传递给下一个流组件a `List<Map<String, Object>`，其中列表中的每个`Map<String, Object>`元素都包含查询实体的记录。地图的关键字是记录的实体属性名称。

=== 更新记录

更新实体中的现有记录。

下表列出了操作输入：

[%header%autowidth.spread]
|===
|属性 |用法
| *Logical Name*  |记录所属实体的逻辑名称。
| *ID*  |要更新的记录的ID。
| *Attributes*  |具有实体属性名称作为地图关键字的`Map<String, Object>`。要为此操作创建一个有效载荷，请将一个'DataWeave'变压器放置在Mule流中的连接器之前。
|===

*Output*：无效。此操作不会返回值。

=== 更新多个记录

更新实体中的多个现有记录。

下表详细说明了操作输入。

[%header,cols="2*"]
|======
|属性 |用法
| *Logical Name*  |记录所属实体的逻辑名称。
| *Attributes List*  |具有实体属性名称作为地图关键字的`List<Map<String, Object>>`。通过在Mule流中的连接器之前放置'DataWeave'变压器，可以轻松创建此操作的有效载荷。
| *Use Single Transaction* |（可选）指示Dynamics CRM是否应使用单个事务来更新所有项目（自Microsoft Dynamics CRM 2016支持）。
|======

*Output*：`BulkOperationResult<Map<String,Object>>`对象

=== 删除记录

从实体中删除记录。

下表列出了操作输入：

[%header%autowidth.spread]
|===
|属性 |用法
| *Logical Name*  |记录所属实体的逻辑名称。
| *ID*  |要删除的记录的ID。
|===

*Output*：无效。此操作不会返回值。

=== 删除多个记录

从实体中删除多个记录。

下表详细说明了操作输入。

[%header,cols="2*"]
|===
|属性 |用法
| *Logical Name*  |记录所属实体的逻辑名称。
| *Ids*  |带有要删除的记录的ID的`List<String>`。
| *Use Single Transaction* |（可选）指示Dynamics CRM是否应使用单个事务删除所有项目（自Microsoft Dynamics CRM 2016起支持）。
|===

*Output*：`BulkOperationResult<String>`对象

=== 关联记录

创建记录之间的链接。

下表详细介绍了操作输入：

[%header,cols="2*"]
|===
|属性 |用法
| *Logical Name*  |记录所属实体的逻辑名称。
| *ID*  |相关记录相关联的记录的ID。
| *Schema Name*  |创建链接的关系的名称。
| *Entity Role Is Referenced* a |
当关联来自同一实体的记录（自反关系）时，请按如下所示设置此属性：

*  `false`：主要实体记录要关联的记录*References*。
*   `true`：当主要实体记录与要关联的记录*Referenced*匹配时。

|相关实体a |
与相关实体记录关联的`List<Map<String, Object>>`。

每个`Map<String, Object>`包含两个键：

*  `logicalName`：要关联的记录所属实体的逻辑名称。
*  `id`：要关联的记录的ID。

|===

*Output*：无效。此操作不会返回值。

=== 解除关联记录

删除记录之间的链接。

下表详细说明了操作输入。

[%header,cols="2*"]
|===
|属性 |用法
| *Logical Name*  |记录所属实体的逻辑名称。
| *ID*  |从中取消相关记录的记录的ID。
| *Schema Name*  |删除链接的关系名称。
| *Entity Role Is Referenced* a |
当解除同一实体的记录（自反关系）时，请按如下方式设置此属性：

*  `false`：主要实体记录要关联的记录*References*。
*  `true`：当主要实体记录与要关联的记录*Referenced*匹配时。

| *Related Entities* a |
与相关实体记录的`List<Map<String, Object>>`将取消关联。

每个`Map<String, Object>`包含两个键：

*  `logicalName`：要取消关联的记录所属实体的逻辑名称。
*  `id`：要解除关联的记录的ID。

|===

*Output*：无效。此操作不会返回值。

=== 执行

执行Dynamics CRM组织请求并返回响应。下表详细说明了操作输入。

[%header,cols="2*"]
|===
|属性 |用法
|请求名称 |要执行的请求名称。
|请求标识 |（可选）请求的标识。
|请求参数 |请求参数取自消息Payload。要为每个操作正确设置这些参数，通常在调用连接器之前使用'DataWeave'。

除了使用POJO（来自 link:https://msdn.microsoft.com/en-us/library/microsoft.xrm.sdk.organizationrequest.aspx[OrganizationRequest]层次结构树）之外，此操作还支持将有效负载提供为Map <String, Object>（这是最高效/紧凑的使用方式）。
|===

*Output*：包含执行方法结果的POJO（来自 link:https://msdn.microsoft.com/en-us/library/microsoft.xrm.sdk.organizationresponse.aspx[OrganizationResponse]层次结构树）。操作的元数据中描述了每个响应的结构。

*Supported Operations*：在 link:https://msdn.microsoft.com/en-us/library/microsoft.crm.sdk.messages.aspx[Microsoft.Crm.Sdk.Messages]和 link:https://msdn.microsoft.com/en-us/library/microsoft.xrm.sdk.messages.aspx[Microsoft.Xrm.Sdk.Messages]命名空间中描述的全套Microsoft Dynamics CRM组织请求实体（操作可用性取决于您正在使用的Microsoft Dynamics CRM版本 - 查看相关文档给你）。

=== 执行多个

执行多个Dynamics CRM组织请求并返回其响应。下表详细说明了操作输入。

[%header,cols="2*"]
|===
|属性 |用法
|请求 |请求来自Payload消息。要为每个操作正确设置这些参数，通常在调用连接器之前使用'DataWeave'。

除了使用带有POJO的数组或列表（来自 link:https://msdn.microsoft.com/en-us/library/microsoft.xrm.sdk.organizationrequest.aspx[OrganizationRequest]层次结构树），此操作还支持将有效内容作为Map <String, Object>的列表或数组提供（这是最有效/紧凑的方式）用法）。
|请求标识 |（可选）请求的标识。
| *Use Single Transaction* |（可选）指示Dynamics CRM是否应使用单个事务执行所有项目（自Microsoft Dynamics CRM 2016起支持）。
|===

包含执行请求结果的*Output*：`BulkOperationResult<OrganizationResponse>`对象（来自 link:https://msdn.microsoft.com/en-us/library/microsoft.xrm.sdk.organizationresponse.aspx[OrganizationResponse]层次结构树）。

*Supported Operations*：在 link:https://msdn.microsoft.com/en-us/library/microsoft.crm.sdk.messages.aspx[Microsoft.Crm.Sdk.Messages]和 link:https://msdn.microsoft.com/en-us/library/microsoft.xrm.sdk.messages.aspx[Microsoft.Xrm.Sdk.Messages]命名空间中描述的全套Microsoft Dynamics CRM组织请求实体（操作可用性取决于您正在使用的Microsoft Dynamics CRM版本 - 查看相关文档给你）。

== 异常处理

连接时=== 例外

如果连接器因任何原因无法与CRM实例连接，则会抛出ConnectionException类型的异常。异常消息有助于调试异常的原因。

操作中的=== 例外

每个操作都抛出一个不同类型的异常。这在定义异常处理策略时非常有用。

下表列出了针对每个操作抛出的异常类型。

[%header,cols="2*"]
|===
|操作 |异常类型
| {创建{1}} IOrganizationServiceCreateOrganizationServiceFaultFaultFaultMessage
|创建多个 | IOrganizationServiceExecuteOrganizationServiceFaultFaultFaultMessage
|更新 | IOrganizationServiceUpdateOrganizationServiceFaultFaultFaultMessage
|更新多个 | IOrganizationServiceExecuteOrganizationServiceFaultFaultFaultMessage
| {删除{1}} IOrganizationServiceDeleteOrganizationServiceFaultFaultFaultMessage
|删除多个 | IOrganizationServiceExecuteOrganizationServiceFaultFaultFaultMessage
| {检索{1}} IOrganizationServiceRetrieveOrganizationServiceFaultFaultFaultMessage
|检索多个 | IOrganizationServiceRetrieveMultipleOrganizationServiceFaultFaultFaultMessage
|与 | IOrganizationServiceAssociateOrganizationServiceFaultFaultFaultMessage
| {取消关联{1}} IOrganizationServiceDisassociateOrganizationServiceFaultFaultFaultMessage
|执行 | IOrganizationServiceExecuteOrganizationServiceFaultFaultFaultMessage
|执行多个 | IOrganizationServiceExecuteOrganizationServiceFaultFaultFaultMessage
|===

==  Maven依赖项代码片段

确保使用连接器将此片段包含在Maven项目中。

[source,java,linenums]
----
<dependency>
            <groupId>org.mule.modules</groupId>
            <artifactId>mule-module-ms-dynamics-crm</artifactId>
            <version>2.8.0</version>
        </dependency>
----

== 数据注意事项

=== 实体参考

实体引用属性可以作为匹配模式_myattribute_referenceto_targetentity_的字符串值访问。

为避免冲突，请勿使用此保留的命名方案将字段添加到您的CRM实例：`[*]_referenceto_[*]`。

例如，联系人实体引用属性`TransactionCurrencyId`是以实体`transactioncurrency`为目标的查找字段。 `transactioncurrency`的`transactioncurrencyid`可在属性`transactioncurrencyid_referenceto_transactioncurrency`中作为字符串访问。

创建和更新操作接受实体引用属性。按照上面的示例，要创建一个定位到`transactioncurrency`的联系人，请将属性`transactioncurrencyid_referenceto_transactioncurrency`的值设置为要引用的记录的`transactioncurrencyid`。

“检索多个记录”操作还允许选择和过滤“实体参考”属性。作为联系人的示例，以下DataSense查询将返回由特定`systemuserid`创建的所有联系人全名：

[source, code, linenums]
----
Select fullname From contact Where createdby_referenceto_systemuser = 
'c7a58b13-df19-491c-a918-1bc26eaf6eb3'
----

=== 派对列表

通常在电子邮件活动中找到派对列表来表示“收件人”，“密件抄送”和“抄送”属性。这种类型的属性可以作为`Map<String, String>`对象列表访问，其中每个列表项代表一个<<Entity Reference>>。 +
举例来说，*Email*派对列表属性*To*是可以以任何以下实体为目标的查找对象列表：*Account*，*Contact*，*Lead* ，*Queue*和*SystemUser*。

*To*属性是`Map<String, String>`对象的列表，其中每个Map的键都是以下值之一：

[source, code]
----
to_referenceto_account, to_referenceto_contact, to_referenceto_lead, to_referenceto_queue or to_referenceto_systemuser
----

对于发送给_account_和_contact_的电子邮件，*To*属性为：

[source, code, linenums]
----
[{ to_referenceto_account: 40f5b94e-1cb6-45c1-9990-76fb7f038447}, { to_referenceto_contact: 3b7d2441-6fc7-48be-a965-a89e501ad5b3} ]
----

=== 料单

选项列表属性可作为整数值访问。

例如，*Contact*属性*familystatuscode*可作为整数值访问。

=== 钱

货币属性可以BigDecimal值访问。

例如，*Contact*属性*creditlimit*可作为BigDecimal值访问。

===  {BulkOperationResult {1}}

*  *isSuccesful*（）返回一个布尔值。如果任何结果包含错误，则为false。
*  *getItems*（）返回结果列表。每个结果都具有相关性，并遵守创建，更新或删除记录的顺序。 +
每个项目都有以下数据：+
如果操作出现故障，则**  *isSuccesful*（）为false。
**  *getId*（）以create-multiple操作返回创建的实体的ID。
**  *getException*（）从后端错误返回异常。
**   *getMessage*（）在isSuccesful（）为false的情况下返回消息。

== 常见问题

=== 此连接器支持哪些版本的Dynamics CRM？

有关受支持的CRM版本的当前列表，请参阅<<Overview>>部分中的xref：supportedversions [支持的版本]。

=== 连接器支持哪些认证方案？

针对本地CRM实例进行身份验证的选项包括Kerberos，声明身份验证（ADFS）和NTLM（通过适用于Windows的Anypoint平台网关）。对于CRM Online，支持标准的CRM在线认证协议。

=== 连接器可以访问CRM对象模型的哪些部分？

所有开箱即用和自定义实体都可通过连接器使用，包括主要实体和关联实体。

=== 此连接器是否支持DataSense和DataWeave？

是的，所有实体和实体属性都通过连接器暴露给Studio以用于DataWeave和DataSense。

=== 我可以使用连接器执行哪些操作？

所有的CRM实体都支持所有标准的create-read-update-delete操作。此外，可以使用本机FetchXML或Mule的DSQL查询语言编写对对象集合的查询。

=== 是否有任何示例显示如何使用连接器？

是的，Anypoint Studio的示例项目可在 link:_attachments/dynamics-crm-connector-samples.zip[dynamics-crm-connector-samples.zip]中找到。

=== 我可以在此连接器上使用哪些Mule版本？

任何运行在任何操作系统和位置上的企业版Anypoint平台都支持此连接器，包括CloudHub集成PaaS。

== 另请参阅

*  link:/mule-user-guide/v/3.8/mule-expression-language-mel[骡子表达语言]
*  link:/mule-user-guide/v/3.8/endpoint-configuration-reference[配置端点]
*  link:/mule-user-guide/v/3.8/transformers[变形金刚]
*  link:/mule-user-guide/v/3.8/flow-reference-component-reference[流参考组件参考]




